@@ -52,6 +52,9 @@ Ver.5.4 (in release candidate)
 - In the context with 'aggregation-*' value, if the 'paging' is true, the pagination works fine. You should
   use this carefully because pagination requires to count total records and it could be a perforance issue.
 - Update sample SQL files. These are added indices for authentication.
+- When the received json data is wrong, the server_access_async method calls the function for failing
+  in the parameter.
+- DB_Logger class works as Signleton. The messages within advice definition classes can be returned.
 - Update TestDB.fmp12 and TestDB_clone.fmp12 to modify the Serial Number setting of 'asset_id' field.
 - [SECURITY FIX] Address an issue with some SMTP servers that could lead to the Bcc email recipients 
   being shown inappropriately.
